// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInput should render icon with 0.4 opacity when disabled 1`] = `
.circuit-2 {
  position: relative;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.21);
  color: #212933;
  padding: 8px 12px;
  font-size: 15px;
  line-height: 24px;
  opacity: 0.5;
  pointer-events: none;
  padding-left: calc( 12px + 16px + 12px );
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::placeholder {
  color: #9DA7B1;
}

.circuit-1 {
  left: 12px;
  position: absolute;
  height: 16px;
  width: 16px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  opacity: 0.4;
}

.circuit-1 spacings {
  bit: 4px;
  byte: 8px;
  kilo: 12px;
  mega: 16px;
  giga: 24px;
  tera: 32px;
  peta: 40px;
  exa: 48px;
  zetta: 56px;
}

.circuit-1 borderRadius {
  kilo: 1px;
  mega: 4px;
  giga: 5px;
}

.circuit-1 typography headings kilo {
  font-size: 17px;
  line-height: 24px;
}

.circuit-1 typography headings mega {
  font-size: 19px;
  line-height: 24px;
}

.circuit-1 typography headings giga {
  font-size: 22px;
  line-height: 24px;
}

.circuit-1 typography headings tera {
  font-size: 24px;
  line-height: 32px;
}

.circuit-1 typography headings peta {
  font-size: 28px;
  line-height: 32px;
}

.circuit-1 typography headings exa {
  font-size: 36px;
  line-height: 44px;
}

.circuit-1 typography headings zetta {
  font-size: 42px;
  line-height: 48px;
}

.circuit-1 typography subHeadings kilo {
  font-size: 12px;
  line-height: 20px;
}

.circuit-1 typography subHeadings mega {
  font-size: 14px;
  line-height: 18px;
}

.circuit-1 typography text kilo {
  font-size: 13px;
  line-height: 20px;
}

.circuit-1 typography text mega {
  font-size: 15px;
  line-height: 24px;
}

.circuit-1 typography text giga {
  font-size: 18px;
  line-height: 28px;
}

.circuit-1 fontWeight {
  regular: 400px;
  bold: 800px;
}

.circuit-1 breakpoints {
  medium: 451px;
  big: 801px;
  huge: 14001px;
}

<div
  className="circuit-2"
  role="search"
>
  <input
    className="circuit-0"
    disabled={true}
  />
  <search.svg
    className="circuit-1"
    disabled={true}
  />
</div>
`;

exports[`SearchInput should render with default styles 1`] = `
.circuit-2 {
  position: relative;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.21);
  color: #212933;
  padding: 8px 12px;
  font-size: 15px;
  line-height: 24px;
  padding-left: calc( 12px + 16px + 12px );
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::placeholder {
  color: #9DA7B1;
}

.circuit-1 {
  left: 12px;
  position: absolute;
  height: 16px;
  width: 16px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.circuit-1 spacings {
  bit: 4px;
  byte: 8px;
  kilo: 12px;
  mega: 16px;
  giga: 24px;
  tera: 32px;
  peta: 40px;
  exa: 48px;
  zetta: 56px;
}

.circuit-1 borderRadius {
  kilo: 1px;
  mega: 4px;
  giga: 5px;
}

.circuit-1 typography headings kilo {
  font-size: 17px;
  line-height: 24px;
}

.circuit-1 typography headings mega {
  font-size: 19px;
  line-height: 24px;
}

.circuit-1 typography headings giga {
  font-size: 22px;
  line-height: 24px;
}

.circuit-1 typography headings tera {
  font-size: 24px;
  line-height: 32px;
}

.circuit-1 typography headings peta {
  font-size: 28px;
  line-height: 32px;
}

.circuit-1 typography headings exa {
  font-size: 36px;
  line-height: 44px;
}

.circuit-1 typography headings zetta {
  font-size: 42px;
  line-height: 48px;
}

.circuit-1 typography subHeadings kilo {
  font-size: 12px;
  line-height: 20px;
}

.circuit-1 typography subHeadings mega {
  font-size: 14px;
  line-height: 18px;
}

.circuit-1 typography text kilo {
  font-size: 13px;
  line-height: 20px;
}

.circuit-1 typography text mega {
  font-size: 15px;
  line-height: 24px;
}

.circuit-1 typography text giga {
  font-size: 18px;
  line-height: 28px;
}

.circuit-1 fontWeight {
  regular: 400px;
  bold: 800px;
}

.circuit-1 breakpoints {
  medium: 451px;
  big: 801px;
  huge: 14001px;
}

<div
  className="circuit-2"
  role="search"
>
  <input
    className="circuit-0"
    disabled={false}
  />
  <search.svg
    className="circuit-1"
    disabled={false}
  />
</div>
`;
